inter change of provider name

--- a/omod/src/main/webapp/resources/htmlforms/kpClinicalVisitForm.html
+++ b/omod/src/main/webapp/resources/htmlforms/kpClinicalVisitForm.html
@@ -2329,14 +2329,13 @@
 
                         <td>
                             <p>
-                                <obs id="ConName" conceptId="160632" class="remarks" answerConceptIds="162591"
-                                     answerSeparator="&lt;br /&gt;"/>
+                                <obs id="providerName" conceptId="1473"/>
                             </p>
                         </td>
 
                         <td>
                             <p>
-                                <obs id="ConDate" conceptId="163526" class="remarks" answerConceptIds="162591"
+                                <obs id="ConDate" conceptId="1473" class="remarks"
                                      answerSeparator="&lt;br /&gt;"/>
                             </p>
                         </td>
