inter change of provider name

--- a/omod/src/main/webapp/resources/htmlforms/kpClinicalVisitForm.html
+++ b/omod/src/main/webapp/resources/htmlforms/kpClinicalVisitForm.html
@@ -2335,8 +2335,7 @@
 
                         <td>
                             <p>
-                                <obs id="ConDate" conceptId="1473" class="remarks"
-                                     answerSeparator="&lt;br /&gt;"/>
+                                <obs id="CareDate" conceptId="160753"/>
                             </p>
                         </td>
                     </tr>
